--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,84 @@
+body{
+  background-color: #001825;
+  color: white;
+}
 .App {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  width: 500px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1{
+  margin: 0;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.math-form{
+  justify-content: space-between;
+  width: 100%;
   display: flex;
+  align-items: center;
   flex-direction: column;
+}
+.math-form input[type='number']{
+  width: 100px;
+  border-radius: 100px;
+  padding: .5rem 1rem ;
+}
+.math-form div{
+  width: 200px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+  margin: .5rem 0;
+}
+.math-form input[type='submit']{
+  background: none;
+  border: none;
+  border-radius: 100px;
+  padding: .75rem 2rem ;
+  background-color: #00a2ff;
+  color: white;
+  cursor: pointer;
+  transition: 0.2s;
+}
+.math-form input[type='submit']:active{
+  background-color: #0076bb;
+
+}
+
+
+.result{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+  transform: translate(-50%,-50%);
+  background-color: #00000055;
+  z-index: 100000;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.result .popup{
+  background-color: white;
+  color: black;
+  text-align: center;
+  width: 25%;
+  padding: 1rem;
+  border-radius: 20px;
+  position: relative;
+}
+.top{
+  top: 1rem;
+}
+.absolute{
+  position: absolute;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.right{
+  right: 1rem;
 }
